deployment/artifacts/project-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-project-bg
  namespace: ${KUBERNETES_NAMESPACE}
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-project-bg
  template:
    metadata:
      labels:
        app: devops-project-bg
    spec:
      containers:
      - name: devops-project-bg
        #image: ${OCIR_HOST}/${OCIR_STORAGE_NAMESPACE}/devops-project/oci-devops-project:${APPLICATION_VERSION}
        image: iad.ocir.io/id6dibaakt36/devops-project/oci-devops-project-bg:${APPLICATION_VERSION}
        imagePullPolicy: Always
        ports:
        - name: service-port
          containerPort: 8090
          #resources:
          #limits:
          #cpu: "250m"
      #volumes:
      #- name: sf-conf-secure-vol
        #secret:
          #secretName: sf-conf-secure
      imagePullSecrets:
      - name: my-docker-reg
---
apiVersion: v1
kind: Service
metadata:
  name: svc-devops-project-bg
  namespace: ${KUBERNETES_NAMESPACE}
spec:
  type: ClusterIP
  selector:
    app: devops-project-bg
  ports:
    - name: service-ports
      protocol: TCP
      port: 8090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-devops-bg
  namespace: mgr
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /greetings/bg/actions/
        pathType: Prefix
        backend:
          service:
            name: svc-devops-project-bg
            port:
              number: 8090
